--- a/Fetching_solar_Stock.ipynb
+++ b/Fetching_solar_Stock.ipynb
@@ -1122,6 +1122,116 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "from scipy.stats import kurtosis, skew\n",
+        "\n",
+        "# Load the dataset\n",
+        "file_path = \"advanced_enhanced_solar_company_data.csv\"\n",
+        "df = pd.read_csv(file_path)\n",
+        "\n",
+        "# Grouped Statistics Function\n",
+        "def compute_grouped_statistics(df, group_col, numeric_cols):\n",
+        "    combined_stats = []\n",
+        "    grouped = df.groupby(group_col)\n",
+        "    for group, data in grouped:\n",
+        "        stats = {}\n",
+        "        for col in numeric_cols:\n",
+        "            if data[col].dtype in ['float64', 'int64']:  # Ensure numeric columns\n",
+        "                stats[col] = {\n",
+        "                    'Mean': data[col].mean(),\n",
+        "                    'Median': data[col].median(),\n",
+        "                    'Std Dev': data[col].std(),\n",
+        "                    'Min': data[col].min(),\n",
+        "                    'Max': data[col].max(),\n",
+        "                    '25th Percentile': data[col].quantile(0.25),\n",
+        "                    '75th Percentile': data[col].quantile(0.75),\n",
+        "                    'Skewness': skew(data[col].dropna()),\n",
+        "                    'Kurtosis': kurtosis(data[col].dropna())\n",
+        "                }\n",
+        "        # Convert to DataFrame and add the company name\n",
+        "        stats_df = pd.DataFrame(stats).T\n",
+        "        stats_df['Company'] = group\n",
+        "        combined_stats.append(stats_df)\n",
+        "    return pd.concat(combined_stats)\n",
+        "\n",
+        "# Select numeric columns for statistics\n",
+        "numeric_columns = ['Close', 'High', 'Low', 'Open', 'Volume', 'Daily_Range',\n",
+        "                   'Normalized_Range', 'Daily_Return', 'Momentum', 'Market_WAP',\n",
+        "                   'EMA_7', 'EMA_30', 'Trend_Strength']\n",
+        "\n",
+        "# Compute combined statistics\n",
+        "all_company_stats = compute_grouped_statistics(df, 'Asset', numeric_columns)\n",
+        "\n",
+        "# Save the combined statistics to a CSV file\n",
+        "all_company_stats.to_csv(\"combined_company_statistics.csv\", index=True)\n",
+        "print(\"Combined statistics saved to 'combined_company_statistics.csv'.\")\n",
+        "\n",
+        "# Display the first few rows of the combined statistics\n",
+        "print(all_company_stats.head())\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bo0t8THur4IU",
+        "outputId": "e23eccb3-faf1-47d9-9651-f682fb463893"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Combined statistics saved to 'combined_company_statistics.csv'.\n",
+            "                Mean        Median       Std Dev        Min           Max  \\\n",
+            "Close   2.428159e+01  2.063000e+01  1.051127e+01      10.65  6.415000e+01   \n",
+            "High    2.489190e+01  2.124000e+01  1.083227e+01      10.84  6.739000e+01   \n",
+            "Low     2.371197e+01  2.025000e+01  1.021218e+01      10.25  6.052000e+01   \n",
+            "Open    2.431049e+01  2.071000e+01  1.054758e+01      10.53  6.390000e+01   \n",
+            "Volume  1.421454e+06  1.137500e+06  1.097211e+06  228100.00  1.515610e+07   \n",
+            "\n",
+            "        25th Percentile  75th Percentile  Skewness   Kurtosis Company  \n",
+            "Close           15.9400     3.315000e+01  0.882367  -0.031502    CSIQ  \n",
+            "High            16.3225     3.384000e+01  0.898999   0.029290    CSIQ  \n",
+            "Low             15.6500     3.227500e+01  0.868561  -0.082167    CSIQ  \n",
+            "Open            16.0050     3.300000e+01  0.890849   0.003517    CSIQ  \n",
+            "Volume      756400.0000     1.740275e+06  3.733381  26.523696    CSIQ  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "sPeccNRRyB6y"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HKOapM6DQaST"
+      },
+      "execution_count": 7,
+      "outputs": []
     }
   ]
 }
